# Digital-Mufti

./: Dockerfile  chainlit.md  main.py  pyproject.toml  requirements.txt  tempo
.chainlit/: config.toml
public/: custom.css
