[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sabter iqbal", email = "sabterrazaqadri@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
myagent = "myagent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
